$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

13-Nov-2010 Jean-Marie Simonet
 # [#23292] Unicode slugs lets Upper case in url, which can cause issues when SEF is on
 # [#23299] calendar css don't display week-end days
 $ [#23199] Database Error: JLIB_DATABASE_ERROR_CONNECT_DATABASE
 # [#23284] Make tabs accessible for keyboard/screen readers. Thanks Andrea.

12-Nov-2010 Jean-Marie Simonet
$ Deleted some redundant ini string

12-Nov-2010 Christophe Demko
 # Sort modules by name when selecting a new one
 + Add missing file [#23160]
 # [#23280] User can block himself in the admin
 # Fix a bad named param in mod_search

11-Nov-2010 Jean-Marie Simonet
 # [#23205] Untranslated COM_CONFIG_ACTION_ADMIN_GLOBAL_DESC. Thanks Bill
 $ Updated some xx-XX.ini files

11-Nov-2010 Christophe Demko
 # [#23242] Component Layout fields shows an error if frontend view does not exist (Andrew Eddie)

11-Nov-2010 Mark Dexter
# Temporary fix for category save bug introduced with [#23068] commit

10-Nov-2010 Christophe Demko
 # Removing an extra div + some formatting while testing [#23068]
 # [#23206] Improving permissions rules output (Dennis Hermacki)
 # [#23068] Add admin rights to article security exploit (Louis Landry)

10-Nov-2010 Jean-Marie Simonet
 $ Updating admin lang xmls
 # [#23195] Prevent defacement of sites by specifying ?tmpl=offline. Thanks Rouven.
 # [#23161] Improve the markup of the Pagenavigation plugin. Thanks Rouven.
 $ [#23198] Remove unnecessary keys in X.plg_system_p3p.sys.ini. Thanks Rouven.
 $ Applying JText::alt to JALL_LANGUAGE see [#23132]

10-Nov-2010 Andrew Eddie
 # Fixed issue [#23175] modal dialog not displaying drop shadows on all sides (Al Kent).
 # Fixed issue [#23168] Category Blog view: Articles get edit permission from the category with its same id number (Juan Felix Mateos, Elin Waring).

09-Nov-2010 Christophe Demko
 # [#23170] Itemid is lost when browsing from content which is not linked to a menu item